Fix [Workflow report] The job 'Result' field length too short (#1600)

--- a/src/components/DetailsResults/detailsResults.scss
+++ b/src/components/DetailsResults/detailsResults.scss
@@ -74,6 +74,11 @@
       width: 250px;
     }
 
+    .table__cell-full {
+      flex: 1 0 auto;
+      width: auto;
+    }
+
     i {
       margin: 0 15px;
     }
